added super cluster example

--- a/cluster/develop/nats/nats-server.conf
+++ b/cluster/develop/nats/nats-server.conf
@@ -10,11 +10,8 @@ cluster {
   name: c1
   port: 6222
   routes [
-    nats://c1n1:6222
-    nats://c1n2:6222
-    nats://c1n3:6222
+    nats://nats1:6222
+    nats://nats2:6222
+    nats://nats3:6222
   ]
-
-  cluster_advertise: $CLUSTER_ADVERTISE
-  connect_retries: 30
 }
